# alarm-jock

./: .gitignore  README.md  config  digitalclock.cpp  digitalclock.h  main.pd  main.py  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build  password.py  pdmain.py  pwdialog.cpp  pwdialog.h  pwdialog.ui  quiz.py  quizdialog.cpp  quizdialog.h  quizdialog.ui
share/: config  main.pd
